Initial Minestom Port