@@ -1,36 +1,36 @@
 package ac.grim.grimac.utils.blockplace;
 
 import ac.grim.grimac.events.packets.CheckManagerListener;
+import ac.grim.grimac.utils.ClientVersion;
 import ac.grim.grimac.utils.blockstate.helper.BlockFaceHelper;
 import ac.grim.grimac.utils.collisions.CollisionData;
 import ac.grim.grimac.utils.collisions.datatypes.CollisionBox;
-import ac.grim.grimac.utils.latency.CompensatedWorld;
+import ac.grim.grimac.utils.minestom.BlockTags;
+import ac.grim.grimac.utils.minestom.ItemTags;
+import ac.grim.grimac.utils.minestom.MinestomWrappedBlockState;
+import ac.grim.grimac.utils.minestom.StateValue;
 import ac.grim.grimac.utils.nmsutil.Dripstone;
 import ac.grim.grimac.utils.nmsutil.Materials;
-import com.github.retrooper.packetevents.PacketEvents;
-import com.github.retrooper.packetevents.manager.server.ServerVersion;
-import com.github.retrooper.packetevents.protocol.item.type.ItemType;
-import com.github.retrooper.packetevents.protocol.item.type.ItemTypes;
-import com.github.retrooper.packetevents.protocol.player.ClientVersion;
-import com.github.retrooper.packetevents.protocol.world.BlockFace;
-import com.github.retrooper.packetevents.protocol.world.states.WrappedBlockState;
-import com.github.retrooper.packetevents.protocol.world.states.defaulttags.BlockTags;
-import com.github.retrooper.packetevents.protocol.world.states.defaulttags.ItemTags;
-import com.github.retrooper.packetevents.protocol.world.states.enums.*;
-import com.github.retrooper.packetevents.protocol.world.states.type.StateType;
-import com.github.retrooper.packetevents.protocol.world.states.type.StateTypes;
-import com.github.retrooper.packetevents.protocol.world.states.type.StateValue;
-import com.github.retrooper.packetevents.util.Vector3i;
-import org.bukkit.util.Vector;
+import ac.grim.grimac.utils.vector.MutableVector;
+import ac.grim.grimac.utils.vector.Vector3i;
+import ac.grim.grimac.utils.minestom.enums.*;
+import net.minestom.server.instance.block.Block;
+import net.minestom.server.instance.block.BlockFace;
+import net.minestom.server.item.Material;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 public enum BlockPlaceResult {
 
     // If the block only has directional data
     ANVIL((player, place) -> {
-        WrappedBlockState data = place.getMaterial().createBlockState(CompensatedWorld.blockVersion);
+        MinestomWrappedBlockState data = new MinestomWrappedBlockState(place.getMaterial());
         data.setFacing(BlockFaceHelper.getClockWise(place.getPlayerFacing()));
         place.set(data);
     }, ItemTags.ANVIL),
@@ -48,18 +48,18 @@ public enum BlockPlaceResult {
 
     SNOW((player, place) -> {
         Vector3i against = place.getPlacedAgainstBlockLocation();
-        WrappedBlockState blockState = place.getExistingBlockData();
+        MinestomWrappedBlockState blockState = place.getExistingBlockData();
         int layers = 0;
-        if (blockState.getType() == StateTypes.SNOW) {
+        if (blockState.getType() == Block.SNOW) {
             layers = blockState.getLayers(); // Indexed at 1
         }
 
-        WrappedBlockState below = place.getBelowState();
+        MinestomWrappedBlockState below = place.getBelowState();
 
-        if (!BlockTags.ICE.contains(below.getType()) && below.getType() != StateTypes.BARRIER) {
+        if (!BlockTags.ICE.contains(below.getType()) && below.getType() != Block.BARRIER) {
             boolean set = false;
-            if (below.getType() != StateTypes.HONEY_BLOCK && below.getType() != StateTypes.SOUL_SAND) {
-                if (place.isFullFace(BlockFace.DOWN)) { // Vanilla also checks for 8 layers of snow but that's redundant...
+            if (below.getType() != Block.HONEY_BLOCK && below.getType() != Block.SOUL_SAND) {
+                if (place.isFullFace(BlockFace.BOTTOM)) { // Vanilla also checks for 8 layers of snow but that's redundant...
                     set = true;
                 }
             } else { // Honey and soul sand are exempt from this full face check
@@ -67,8 +67,8 @@ public enum BlockPlaceResult {
             }
 
             if (set) {
-                if (blockState.getType() == StateTypes.SNOW) {
-                    WrappedBlockState snow = StateTypes.SNOW.createBlockState(CompensatedWorld.blockVersion);
+                if (blockState.getType() == Block.SNOW) {
+                    MinestomWrappedBlockState snow = new MinestomWrappedBlockState(Block.SNOW);
                     snow.setLayers(Math.min(8, layers + 1));
                     place.set(against, snow);
                 } else {
@@ -77,19 +77,19 @@ public enum BlockPlaceResult {
             }
         }
 
-    }, ItemTypes.SNOW),
+    }, Material.SNOW),
 
     SLAB((player, place) -> {
-        Vector clickedPos = place.getClickedLocation();
-        WrappedBlockState slabData = place.getMaterial().createBlockState(CompensatedWorld.blockVersion);
-        WrappedBlockState existing = place.getExistingBlockData();
+        MutableVector clickedPos = place.getClickedLocation();
+        MinestomWrappedBlockState slabData = new MinestomWrappedBlockState(place.getMaterial());
+        MinestomWrappedBlockState existing = place.getExistingBlockData();
 
         if (BlockTags.SLABS.contains(existing.getType())) {
             slabData.setTypeData(Type.DOUBLE);
             place.set(place.getPlacedAgainstBlockLocation(), slabData);
         } else {
             BlockFace direction = place.getDirection();
-            boolean clickedTop = direction != BlockFace.DOWN && (direction == BlockFace.UP || !(clickedPos.getY() > 0.5D));
+            boolean clickedTop = direction != BlockFace.BOTTOM && (direction == BlockFace.TOP || !(clickedPos.getY() > 0.5D));
             slabData.setTypeData(clickedTop ? Type.BOTTOM : Type.TOP);
             place.set(slabData);
         }
@@ -98,25 +98,25 @@ public enum BlockPlaceResult {
 
     STAIRS((player, place) -> {
         BlockFace direction = place.getDirection();
-        WrappedBlockState stair = place.getMaterial().createBlockState(CompensatedWorld.blockVersion);
+        MinestomWrappedBlockState stair = new MinestomWrappedBlockState(place.getMaterial());
         stair.setFacing(place.getPlayerFacing());
 
-        Half half = (direction != BlockFace.DOWN && (direction == BlockFace.UP || place.getClickedLocation().getY() < 0.5D)) ? Half.BOTTOM : Half.TOP;
+        Half half = (direction != BlockFace.BOTTOM && (direction == BlockFace.TOP || place.getClickedLocation().getY() < 0.5D)) ? Half.BOTTOM : Half.TOP;
         stair.setHalf(half);
         place.set(stair);
     }, ItemTags.STAIRS),
 
     END_ROD((player, place) -> {
-        WrappedBlockState endRod = place.getMaterial().createBlockState(CompensatedWorld.blockVersion);
+        MinestomWrappedBlockState endRod = new MinestomWrappedBlockState(place.getMaterial());
         endRod.setFacing(place.getDirection());
         place.set(endRod);
-    }, ItemTypes.END_ROD, ItemTypes.LIGHTNING_ROD),
+    }, Material.END_ROD, Material.LIGHTNING_ROD),
 
     LADDER((player, place) -> {
         //  No placing a ladder against another ladder
         if (!place.isReplaceClicked()) {
-            WrappedBlockState existing = player.compensatedWorld.getWrappedBlockStateAt(place.getPlacedAgainstBlockLocation());
-            if (existing.getType() == StateTypes.LADDER && existing.getFacing() == place.getDirection()) {
+            MinestomWrappedBlockState existing = player.compensatedWorld.getWrappedBlockStateAt(place.getPlacedAgainstBlockLocation());
+            if (existing.getType() == Block.LADDER && existing.getFacing() == place.getDirection()) {
                 return;
             }
         }
@@ -126,64 +126,64 @@ public enum BlockPlaceResult {
             // Heads have no special preferences - place them anywhere
             // Signs need solid - exempts chorus flowers and a few other strange cases
             if (BlockFaceHelper.isFaceHorizontal(face) && place.isFullFace(face)) {
-                WrappedBlockState ladder = place.getMaterial().createBlockState(CompensatedWorld.blockVersion);
+                MinestomWrappedBlockState ladder = new MinestomWrappedBlockState(place.getMaterial());
                 ladder.setFacing(face.getOppositeFace());
                 place.set(ladder);
                 return;
             }
         }
-    }, ItemTypes.LADDER),
+    }, Material.LADDER),
 
     FARM_BLOCK((player, place) -> {
         // What we also need to check:
-        WrappedBlockState above = place.getAboveState();
-        if (!above.getType().isBlocking() && !BlockTags.FENCE_GATES.contains(above.getType()) && above.getType() != StateTypes.MOVING_PISTON) {
+        MinestomWrappedBlockState above = place.getAboveState();
+        if (!above.isBlocking() && !BlockTags.FENCE_GATES.contains(above.getType()) && above.getType() != Block.MOVING_PISTON) {
             place.set(place.getMaterial());
         }
-    }, ItemTypes.FARMLAND),
+    }, Material.FARMLAND),
 
     // 1.13+ only blocks from here below!  No need to write everything twice
     AMETHYST_CLUSTER((player, place) -> {
-        WrappedBlockState amethyst = place.getMaterial().createBlockState(CompensatedWorld.blockVersion);
+        MinestomWrappedBlockState amethyst = new MinestomWrappedBlockState(place.getMaterial());
         amethyst.setFacing(place.getDirection());
         if (place.isFullFace(place.getDirection().getOppositeFace())) place.set(amethyst);
-    }, ItemTypes.AMETHYST_CLUSTER, ItemTypes.SMALL_AMETHYST_BUD, ItemTypes.MEDIUM_AMETHYST_BUD, ItemTypes.LARGE_AMETHYST_BUD),
+    }, Material.AMETHYST_CLUSTER, Material.SMALL_AMETHYST_BUD, Material.MEDIUM_AMETHYST_BUD, Material.LARGE_AMETHYST_BUD),
 
     BAMBOO((player, place) -> {
         Vector3i clicked = place.getPlacedAgainstBlockLocation();
         if (player.compensatedWorld.getFluidLevelAt(clicked.getX(), clicked.getY(), clicked.getZ()) > 0) return;
 
-        WrappedBlockState below = place.getBelowState();
+        MinestomWrappedBlockState below = place.getBelowState();
         if (BlockTags.BAMBOO_PLANTABLE_ON.contains(below.getType())) {
-            if (below.getType() == StateTypes.BAMBOO_SAPLING || below.getType() == StateTypes.BAMBOO) {
-                place.set(StateTypes.BAMBOO);
+            if (below.getType() == Block.BAMBOO_SAPLING || below.getType() == Block.BAMBOO) {
+                place.set(Block.BAMBOO);
             } else {
-                WrappedBlockState above = place.getBelowState();
-                if (above.getType() == StateTypes.BAMBOO_SAPLING || above.getType() == StateTypes.BAMBOO) {
-                    place.set(StateTypes.BAMBOO);
+                MinestomWrappedBlockState above = place.getBelowState();
+                if (above.getType() == Block.BAMBOO_SAPLING || above.getType() == Block.BAMBOO) {
+                    place.set(Block.BAMBOO);
                 } else {
-                    place.set(StateTypes.BAMBOO_SAPLING);
+                    place.set(Block.BAMBOO_SAPLING);
                 }
             }
         }
-    }, ItemTypes.BAMBOO),
+    }, Material.BAMBOO),
 
     BELL((player, place) -> {
         BlockFace direction = place.getDirection();
-        WrappedBlockState bell = place.getMaterial().createBlockState(CompensatedWorld.blockVersion);
+        MinestomWrappedBlockState bell = new MinestomWrappedBlockState(place.getMaterial());
 
         boolean canSurvive = !BlockTags.FENCE_GATES.contains(place.getPlacedAgainstMaterial());
         // This is exempt from being able to place on
         if (!canSurvive) return;
 
         if (place.isFaceVertical()) {
-            if (direction == BlockFace.DOWN) {
+            if (direction == BlockFace.BOTTOM) {
                 bell.setAttachment(Attachment.CEILING);
-                canSurvive = place.isFaceFullCenter(BlockFace.UP);
+                canSurvive = place.isFaceFullCenter(BlockFace.TOP);
             }
-            if (direction == BlockFace.UP) {
+            if (direction == BlockFace.TOP) {
                 bell.setAttachment(Attachment.FLOOR);
-                canSurvive = place.isFullFace(BlockFace.DOWN);
+                canSurvive = place.isFullFace(BlockFace.BOTTOM);
             }
             bell.setFacing(place.getPlayerFacing());
         } else {
@@ -204,16 +204,16 @@ public enum BlockPlaceResult {
                 return;
             }
 
-            boolean flag1 = place.isFullFace(BlockFace.DOWN);
+            boolean flag1 = place.isFullFace(BlockFace.BOTTOM);
             bell.setAttachment(flag1 ? Attachment.FLOOR : Attachment.CEILING);
-            canSurvive = place.isFullFace(flag1 ? BlockFace.DOWN : BlockFace.UP);
+            canSurvive = place.isFullFace(flag1 ? BlockFace.BOTTOM : BlockFace.TOP);
         }
         if (canSurvive) place.set(bell);
-    }, ItemTypes.BELL),
+    }, Material.BELL),
 
     CANDLE((player, place) -> {
-        WrappedBlockState existing = place.getExistingBlockData();
-        WrappedBlockState candle = place.getMaterial().createBlockState(CompensatedWorld.blockVersion);
+        MinestomWrappedBlockState existing = place.getExistingBlockData();
+        MinestomWrappedBlockState candle = new MinestomWrappedBlockState(place.getMaterial());
 
         if (BlockTags.CANDLES.contains(existing.getType())) {
             // Max candles already exists
@@ -221,30 +221,30 @@ public enum BlockPlaceResult {
             candle.setCandles(existing.getCandles() + 1);
         }
 
-        if (place.isFaceFullCenter(BlockFace.DOWN)) {
+        if (place.isFaceFullCenter(BlockFace.BOTTOM)) {
             place.set(candle);
         }
     }, ItemTags.CANDLES),
 
     // Sea pickles refuse to overwrite any collision... but... that's already checked.  Unsure what Mojang is doing.
     SEA_PICKLE((player, place) -> {
-        WrappedBlockState existing = place.getExistingBlockData();
+        MinestomWrappedBlockState existing = place.getExistingBlockData();
 
-        if (!place.isFullFace(BlockFace.DOWN) && !place.isFaceEmpty(BlockFace.DOWN)) return;
+        if (!place.isFullFace(BlockFace.BOTTOM) && !place.isFaceEmpty(BlockFace.BOTTOM)) return;
 
-        if (existing.getType() == StateTypes.SEA_PICKLE) {
+        if (existing.getType() == Block.SEA_PICKLE) {
             // Max pickels already exist
             if (existing.getPickles() == 4) return;
             existing.setPickles(existing.getPickles() + 1);
         } else {
-            existing = StateTypes.SEA_PICKLE.createBlockState(CompensatedWorld.blockVersion);
+            existing = new MinestomWrappedBlockState(Block.SEA_PICKLE);
         }
 
         place.set(existing);
-    }, ItemTypes.SEA_PICKLE),
+    }, Material.SEA_PICKLE),
 
     CHAIN((player, place) -> {
-        WrappedBlockState chain = place.getMaterial().createBlockState(CompensatedWorld.blockVersion);
+        MinestomWrappedBlockState chain = new MinestomWrappedBlockState(place.getMaterial());
         BlockFace face = place.getDirection();
 
         switch (face) {
@@ -256,65 +256,65 @@ public enum BlockPlaceResult {
             case SOUTH:
                 chain.setAxis(Axis.Z);
                 break;
-            case UP:
-            case DOWN:
+            case TOP:
+            case BOTTOM:
                 chain.setAxis(Axis.Y);
                 break;
         }
 
         place.set(chain);
-    }, ItemTypes.CHAIN),
+    }, Material.CHAIN),
 
     COCOA((player, place) -> {
         for (BlockFace face : place.getNearestPlacingDirections()) {
             if (BlockFaceHelper.isFaceVertical(face)) continue;
-            StateType mat = place.getDirectionalState(face).getType();
-            if (mat == StateTypes.JUNGLE_LOG || mat == StateTypes.STRIPPED_JUNGLE_LOG || mat == StateTypes.JUNGLE_WOOD) {
-                WrappedBlockState data = place.getMaterial().createBlockState(CompensatedWorld.blockVersion);
+            Block mat = place.getDirectionalState(face).getType();
+            if (mat == Block.JUNGLE_LOG || mat == Block.STRIPPED_JUNGLE_LOG || mat == Block.JUNGLE_WOOD) {
+                MinestomWrappedBlockState data = new MinestomWrappedBlockState(place.getMaterial());
                 data.setFacing(face);
                 place.set(face, data);
                 break;
             }
         }
-    }, ItemTypes.COCOA_BEANS),
+    }, Material.COCOA_BEANS),
 
     DIRT_PATH((player, place) -> {
-        WrappedBlockState state = place.getDirectionalState(BlockFace.UP);
+        MinestomWrappedBlockState state = place.getDirectionalState(BlockFace.TOP);
         // If there is a solid block above the dirt path, it turns to air.  This does not include fence gates
-        if (!state.getType().isBlocking() || BlockTags.FENCE_GATES.contains(state.getType())) {
+        if (!state.isBlocking() || BlockTags.FENCE_GATES.contains(state.getType())) {
             place.set(place.getMaterial());
         } else {
-            place.set(StateTypes.DIRT);
+            place.set(Block.DIRT);
         }
-    }, ItemTypes.DIRT_PATH),
+    }, Material.DIRT_PATH),
 
     HOPPER((player, place) -> {
         BlockFace opposite = place.getDirection().getOppositeFace();
-        WrappedBlockState hopper = place.getMaterial().createBlockState(CompensatedWorld.blockVersion);
-        hopper.setFacing(place.isFaceVertical() ? BlockFace.DOWN : opposite);
+        MinestomWrappedBlockState hopper = new MinestomWrappedBlockState(place.getMaterial());
+        hopper.setFacing(place.isFaceVertical() ? BlockFace.BOTTOM : opposite);
         place.set(hopper);
-    }, ItemTypes.HOPPER),
+    }, Material.HOPPER),
 
     LANTERN((player, place) -> {
         for (BlockFace face : place.getNearestPlacingDirections()) {
             if (BlockFaceHelper.isFaceHorizontal(face)) continue;
-            WrappedBlockState lantern = place.getMaterial().createBlockState(CompensatedWorld.blockVersion);
+            MinestomWrappedBlockState lantern = new MinestomWrappedBlockState(place.getMaterial());
 
-            boolean isHanging = face == BlockFace.UP;
+            boolean isHanging = face == BlockFace.TOP;
             lantern.setHanging(isHanging);
 
-            boolean canSurvive = place.isFaceFullCenter(isHanging ? BlockFace.UP : BlockFace.DOWN) && !BlockTags.FENCE_GATES.contains(place.getPlacedAgainstMaterial());
+            boolean canSurvive = place.isFaceFullCenter(isHanging ? BlockFace.TOP : BlockFace.BOTTOM) && !BlockTags.FENCE_GATES.contains(place.getPlacedAgainstMaterial());
             if (!canSurvive) continue;
 
             place.set(lantern);
             return;
         }
-    }, ItemTypes.LANTERN, ItemTypes.SOUL_LANTERN),
+    }, Material.LANTERN, Material.SOUL_LANTERN),
 
     POINTED_DRIPSTONE((player, place) -> {
         // To explain what Mojang is doing, take the example of placing on top face
         BlockFace primaryDir = place.getNearestVerticalDirection().getOppositeFace(); // The player clicked downwards, so use upwards
-        WrappedBlockState typePlacingOn = place.getDirectionalState(primaryDir.getOppositeFace()); // Block we are placing on
+        MinestomWrappedBlockState typePlacingOn = place.getDirectionalState(primaryDir.getOppositeFace()); // Block we are placing on
 
         // Check to see if we can place on the block or there is dripstone on the block that we are placing on also pointing upwards
         boolean primarySameType = typePlacingOn.getInternalData().containsKey(StateValue.VERTICAL_DIRECTION) && typePlacingOn.getVerticalDirection().name().equals(primaryDir.name());
@@ -323,7 +323,7 @@ public enum BlockPlaceResult {
         // Try to use the opposite direction, just to see if switching directions makes it valid.
         if (!primaryValid) {
             BlockFace secondaryDirection = primaryDir.getOppositeFace(); // See if placing it DOWNWARDS is valid
-            WrappedBlockState secondaryType = place.getDirectionalState(secondaryDirection.getOppositeFace()); // Get the block above us
+            MinestomWrappedBlockState secondaryType = place.getDirectionalState(secondaryDirection.getOppositeFace()); // Get the block above us
             // Check if the dripstone above us is also facing downwards
             boolean secondarySameType = secondaryType.getInternalData().containsKey(StateValue.VERTICAL_DIRECTION) && secondaryType.getVerticalDirection().name().equals(primaryDir.name());
 
@@ -335,7 +335,7 @@ public enum BlockPlaceResult {
         // No valid locations
         if (!primaryValid) return;
 
-        WrappedBlockState toPlace = StateTypes.POINTED_DRIPSTONE.createBlockState(CompensatedWorld.blockVersion);
+        MinestomWrappedBlockState toPlace = new MinestomWrappedBlockState(Block.POINTED_DRIPSTONE);
         toPlace.setVerticalDirection(VerticalDirection.valueOf(primaryDir.name())); // This block is facing UPWARDS as placed on the top face
 
         // We then have to calculate the thickness of the dripstone
@@ -345,12 +345,12 @@ public enum BlockPlaceResult {
         //
         // If the dripstone is -> <- pointed at one another
 
-        // If check the blockstate that is above now with the direction of DOWN
+        // If check the blockstate that is above now with the direction of BOTTOM
         Vector3i placedPos = place.getPlacedBlockPos();
         Dripstone.update(player, toPlace, placedPos.getX(), placedPos.getY(), placedPos.getZ(), place.isSecondaryUse());
 
         place.set(toPlace);
-    }, ItemTypes.POINTED_DRIPSTONE),
+    }, Material.POINTED_DRIPSTONE),
 
     CACTUS((player, place) -> {
         for (BlockFace face : place.getHorizontalFaces()) {
@@ -359,76 +359,76 @@ public enum BlockPlaceResult {
             }
         }
 
-        if (place.isOn(StateTypes.CACTUS, StateTypes.SAND, StateTypes.RED_SAND) && !place.isLava(BlockFace.UP)) {
+        if (place.isOn(Block.CACTUS, Block.SAND, Block.RED_SAND) && !place.isLava(BlockFace.TOP)) {
             place.set();
         }
-    }, ItemTypes.CACTUS),
+    }, Material.CACTUS),
 
     CAKE((player, place) -> {
-        if (place.isSolidBlocking(BlockFace.DOWN)) {
+        if (place.isSolidBlocking(BlockFace.BOTTOM)) {
             place.set();
         }
-    }, ItemTypes.CAKE),
+    }, Material.CAKE),
 
     CANDLE_CAKE((player, place) -> {
-        if (place.isSolidBlocking(BlockFace.DOWN)) {
+        if (place.isSolidBlocking(BlockFace.BOTTOM)) {
             place.set();
         }
-    }, ItemTypes.values().stream().filter(mat -> mat.getName().getKey().contains("candle_cake"))
-            .collect(Collectors.toList()).toArray(new ItemType[0])),
+    }, Material.values().stream().filter(mat -> mat.namespace().key().asString().contains("candle_cake"))
+            .toList().toArray(new Material[0])),
 
     PISTON_BASE((player, place) -> {
-        WrappedBlockState piston = place.getMaterial().createBlockState(CompensatedWorld.blockVersion);
+        MinestomWrappedBlockState piston = new MinestomWrappedBlockState(place.getMaterial());
         piston.setFacing(place.getNearestVerticalDirection().getOppositeFace());
         place.set(piston);
-    }, ItemTypes.PISTON, ItemTypes.STICKY_PISTON),
+    }, Material.PISTON, Material.STICKY_PISTON),
 
     AZALEA((player, place) -> {
-        WrappedBlockState below = place.getBelowState();
-        if (place.isOnDirt() || below.getType() == StateTypes.FARMLAND || below.getType() == StateTypes.CLAY) {
+        MinestomWrappedBlockState below = place.getBelowState();
+        if (place.isOnDirt() || below.getType() == Block.FARMLAND || below.getType() == Block.CLAY) {
             place.set(place.getMaterial());
         }
-    }, ItemTypes.AZALEA, ItemTypes.FLOWERING_AZALEA),
+    }, Material.AZALEA, Material.FLOWERING_AZALEA),
 
     CROP((player, place) -> {
-        WrappedBlockState below = place.getBelowState();
-        if (below.getType() == StateTypes.FARMLAND) {
+        MinestomWrappedBlockState below = place.getBelowState();
+        if (below.getType() == Block.FARMLAND) {
             // This is wrong and depends on lighting, but the server resync's anyways plus this isn't a solid block so I don't care.
             place.set();
         }
-    }, ItemTypes.CARROT, ItemTypes.BEETROOT, ItemTypes.POTATO,
-            ItemTypes.PUMPKIN_SEEDS, ItemTypes.MELON_SEEDS, ItemTypes.WHEAT_SEEDS, ItemTypes.TORCHFLOWER_SEEDS),
+    }, Material.CARROT, Material.BEETROOT, Material.POTATO,
+            Material.PUMPKIN_SEEDS, Material.MELON_SEEDS, Material.WHEAT_SEEDS, Material.TORCHFLOWER_SEEDS),
 
     SUGARCANE((player, place) -> {
-        if (place.isOn(StateTypes.SUGAR_CANE)) {
+        if (place.isOn(Block.SUGAR_CANE)) {
             place.set();
             return;
         }
 
-        if (place.isOnDirt() || place.isOn(StateTypes.SAND, StateTypes.RED_SAND)) {
+        if (place.isOnDirt() || place.isOn(Block.SAND, Block.RED_SAND)) {
             Vector3i pos = place.getPlacedBlockPos();
             pos = pos.withY(pos.getY() - 1);
 
             for (BlockFace direction : place.getHorizontalFaces()) {
                 Vector3i toSearchPos = pos;
-                toSearchPos = toSearchPos.withX(toSearchPos.getX() + direction.getModX());
-                toSearchPos = toSearchPos.withZ(toSearchPos.getZ() + direction.getModZ());
+                toSearchPos = toSearchPos.withX(toSearchPos.getX() + direction.toDirection().normalX());
+                toSearchPos = toSearchPos.withZ(toSearchPos.getZ() + direction.toDirection().normalZ());
 
-                WrappedBlockState directional = player.compensatedWorld.getWrappedBlockStateAt(toSearchPos);
-                if (Materials.isWater(player.getClientVersion(), directional) || directional.getType() == StateTypes.FROSTED_ICE) {
+                MinestomWrappedBlockState directional = player.compensatedWorld.getWrappedBlockStateAt(toSearchPos);
+                if (Materials.isWater(player.getClientVersion(), directional) || directional.getType() == Block.FROSTED_ICE) {
                     place.set();
                     return;
                 }
             }
         }
-    }, ItemTypes.SUGAR_CANE),
+    }, Material.SUGAR_CANE),
 
     // Moss carpet is a carpet not under the carpets tag
     MOSS_CARPET((player, place) -> {
         if (!place.getBelowMaterial().isAir()) {
             place.set();
         }
-    }, ItemTypes.MOSS_CARPET),
+    }, Material.MOSS_CARPET),
 
     CARPET((player, place) -> {
         if (!place.getBelowMaterial().isAir()) {
@@ -437,14 +437,14 @@ public enum BlockPlaceResult {
     }, ItemTags.WOOL_CARPETS),
 
     CHORUS_FLOWER((player, place) -> {
-        WrappedBlockState blockstate = place.getBelowState();
-        if (blockstate.getType() != StateTypes.CHORUS_PLANT && blockstate.getType() != StateTypes.END_STONE) {
+        MinestomWrappedBlockState blockstate = place.getBelowState();
+        if (blockstate.getType() != Block.CHORUS_PLANT && blockstate.getType() != Block.END_STONE) {
             if (blockstate.getType().isAir()) {
                 boolean flag = false;
 
                 for (BlockFace direction : place.getHorizontalFaces()) {
-                    WrappedBlockState blockstate1 = place.getDirectionalState(direction);
-                    if (blockstate1.getType() == StateTypes.CHORUS_PLANT) {
+                    MinestomWrappedBlockState blockstate1 = place.getDirectionalState(direction);
+                    if (blockstate1.getType() == Block.CHORUS_PLANT) {
                         if (flag) {
                             return;
                         }
@@ -462,108 +462,108 @@ public enum BlockPlaceResult {
         } else {
             place.set();
         }
-    }, ItemTypes.CHORUS_FLOWER),
+    }, Material.CHORUS_FLOWER),
 
     CHORUS_PLANT((player, place) -> {
-        WrappedBlockState blockstate = place.getBelowState();
+        MinestomWrappedBlockState blockstate = place.getBelowState();
         boolean flag = !place.getAboveState().getType().isAir() && !blockstate.getType().isAir();
 
         for (BlockFace direction : place.getHorizontalFaces()) {
-            WrappedBlockState blockstate1 = place.getDirectionalState(direction);
-            if (blockstate1.getType() == StateTypes.CHORUS_PLANT) {
+            MinestomWrappedBlockState blockstate1 = place.getDirectionalState(direction);
+            if (blockstate1.getType() == Block.CHORUS_PLANT) {
                 if (flag) {
                     return;
                 }
 
                 Vector3i placedPos = place.getPlacedBlockPos();
-                placedPos = placedPos.add(direction.getModX(), -1, direction.getModZ());
+                placedPos = placedPos.add(direction.toDirection().normalX(), -1, direction.toDirection().normalZ());
 
-                WrappedBlockState blockstate2 = player.compensatedWorld.getWrappedBlockStateAt(placedPos);
-                if (blockstate2.getType() == StateTypes.CHORUS_PLANT || blockstate2.getType() == StateTypes.END_STONE) {
+                MinestomWrappedBlockState blockstate2 = player.compensatedWorld.getWrappedBlockStateAt(placedPos);
+                if (blockstate2.getType() == Block.CHORUS_PLANT || blockstate2.getType() == Block.END_STONE) {
                     place.set();
                 }
             }
         }
 
-        if (blockstate.getType() == StateTypes.CHORUS_PLANT || blockstate.getType() == StateTypes.END_STONE) {
+        if (blockstate.getType() == Block.CHORUS_PLANT || blockstate.getType() == Block.END_STONE) {
             place.set();
         }
-    }, ItemTypes.CHORUS_PLANT),
+    }, Material.CHORUS_PLANT),
 
     DEAD_BUSH((player, place) -> {
-        WrappedBlockState below = place.getBelowState();
-        if (below.getType() == StateTypes.SAND || below.getType() == StateTypes.RED_SAND ||
+        MinestomWrappedBlockState below = place.getBelowState();
+        if (below.getType() == Block.SAND || below.getType() == Block.RED_SAND ||
                 BlockTags.TERRACOTTA.contains(below.getType()) || place.isOnDirt()) {
             place.set(place.getMaterial());
         }
-    }, ItemTypes.DEAD_BUSH),
+    }, Material.DEAD_BUSH),
 
     DIODE((player, place) -> {
-        if (place.isFaceRigid(BlockFace.DOWN)) {
+        if (place.isFaceRigid(BlockFace.BOTTOM)) {
             place.set();
         }
-    }, ItemTypes.REPEATER, ItemTypes.COMPARATOR, ItemTypes.REDSTONE),
+    }, Material.REPEATER, Material.COMPARATOR, Material.REDSTONE),
 
     FUNGUS((player, place) -> {
-        if (place.isOn(StateTypes.CRIMSON_NYLIUM, StateTypes.WARPED_NYLIUM, StateTypes.MYCELIUM, StateTypes.SOUL_SOIL, StateTypes.FARMLAND) || place.isOnDirt()) {
+        if (place.isOn(Block.CRIMSON_NYLIUM, Block.WARPED_NYLIUM, Block.MYCELIUM, Block.SOUL_SOIL, Block.FARMLAND) || place.isOnDirt()) {
             place.set();
         }
-    }, ItemTypes.CRIMSON_FUNGUS, ItemTypes.WARPED_FUNGUS),
+    }, Material.CRIMSON_FUNGUS, Material.WARPED_FUNGUS),
 
     SPROUTS((player, place) -> {
-        if (place.isOn(StateTypes.CRIMSON_NYLIUM, StateTypes.WARPED_NYLIUM, StateTypes.SOUL_SOIL, StateTypes.FARMLAND) || place.isOnDirt()) {
+        if (place.isOn(Block.CRIMSON_NYLIUM, Block.WARPED_NYLIUM, Block.SOUL_SOIL, Block.FARMLAND) || place.isOnDirt()) {
             place.set();
         }
-    }, ItemTypes.NETHER_SPROUTS, ItemTypes.WARPED_ROOTS, ItemTypes.CRIMSON_ROOTS),
+    }, Material.NETHER_SPROUTS, Material.WARPED_ROOTS, Material.CRIMSON_ROOTS),
 
     NETHER_WART((player, place) -> {
-        if (place.isOn(StateTypes.SOUL_SAND)) {
+        if (place.isOn(Block.SOUL_SAND)) {
             place.set();
         }
-    }, ItemTypes.NETHER_WART),
+    }, Material.NETHER_WART),
 
     WATERLILY((player, place) -> {
-        WrappedBlockState below = place.getDirectionalState(BlockFace.DOWN);
-        if (!place.isInLiquid() && (Materials.isWater(player.getClientVersion(), below) || place.isOn(StateTypes.ICE, StateTypes.FROSTED_ICE))) {
+        MinestomWrappedBlockState below = place.getDirectionalState(BlockFace.BOTTOM);
+        if (!place.isInLiquid() && (Materials.isWater(player.getClientVersion(), below) || place.isOn(Block.ICE, Block.FROSTED_ICE))) {
             place.set();
         }
-    }, ItemTypes.LILY_PAD),
+    }, Material.LILY_PAD),
 
     WITHER_ROSE((player, place) -> {
-        if (place.isOn(StateTypes.NETHERRACK, StateTypes.SOUL_SAND, StateTypes.SOUL_SOIL, StateTypes.FARMLAND) || place.isOnDirt()) {
+        if (place.isOn(Block.NETHERRACK, Block.SOUL_SAND, Block.SOUL_SOIL, Block.FARMLAND) || place.isOnDirt()) {
             place.set();
         }
-    }, ItemTypes.WITHER_ROSE),
+    }, Material.WITHER_ROSE),
 
     // Blocks that have both wall and standing states
     TORCH_OR_HEAD((player, place) -> {
         // type doesn't matter to grim, same hitbox.
         // If it's a torch, create a wall torch
         // Otherwise, it's going to be a head.  The type of this head also doesn't matter
-        WrappedBlockState dir;
-        boolean isTorch = place.getMaterial().getName().contains("torch");
-        boolean isHead = place.getMaterial().getName().contains("head") || place.getMaterial().getName().contains("skull");
+        MinestomWrappedBlockState dir;
+        boolean isTorch = place.getMaterial().namespace().key().asString().contains("torch");
+        boolean isHead = place.getMaterial().namespace().key().asString().contains("head") || place.getMaterial().namespace().key().asString().contains("skull");
         boolean isWallSign = !isTorch && !isHead;
 
         if (isHead && player.getClientVersion().isOlderThanOrEquals(ClientVersion.V_1_12_2))
             return; // 1.12- players don't predict head places
 
         if (isTorch) {
-            dir = StateTypes.WALL_TORCH.createBlockState(CompensatedWorld.blockVersion);
-        } else if (place.getMaterial().getName().contains("head") || place.getMaterial().getName().contains("skull")) {
-            dir = StateTypes.PLAYER_WALL_HEAD.createBlockState(CompensatedWorld.blockVersion);
+            dir = new MinestomWrappedBlockState(Block.WALL_TORCH);
+        } else if (place.getMaterial().namespace().key().asString().contains("head") || place.getMaterial().namespace().key().asString().contains("skull")) {
+            dir = new MinestomWrappedBlockState(Block.PLAYER_WALL_HEAD);
         } else {
-            dir = StateTypes.OAK_WALL_SIGN.createBlockState(CompensatedWorld.blockVersion);
+            dir = new MinestomWrappedBlockState(Block.OAK_WALL_SIGN);
         }
 
         for (BlockFace face : place.getNearestPlacingDirections()) {
             // Torches need solid faces
             // Heads have no special preferences - place them anywhere
             // Signs need solid - exempts chorus flowers and a few other strange cases
-            if (face != BlockFace.UP) {
+            if (face != BlockFace.TOP) {
                 if (BlockFaceHelper.isFaceHorizontal(face)) {
                     boolean canPlace = isHead || ((isWallSign || place.isFullFace(face)) && (isTorch || place.isSolidBlocking(face)));
-                    if (canPlace && face != BlockFace.UP) { // center requires nothing (head), full face (torch), or solid (sign)
+                    if (canPlace && face != BlockFace.TOP) { // center requires nothing (head), full face (torch), or solid (sign)
                         dir.setFacing(face.getOppositeFace());
                         place.set(dir);
                         return;
@@ -577,30 +577,30 @@ public enum BlockPlaceResult {
                 }
             }
         }
-    }, ItemTypes.values().stream().filter(mat ->
-                    mat.getName().getKey().contains("torch") // Find all torches
-                            || (mat.getName().getKey().contains("head") || mat.getName().getKey().contains("skull")) && !mat.getName().getKey().contains("piston") // Skulls
-                            || mat.getName().getKey().contains("sign")) // And signs
-            .toArray(ItemType[]::new)),
+    }, Material.values().stream().filter(mat ->
+                    mat.namespace().key().asString().contains("torch") // Find all torches
+                            || (mat.namespace().key().asString().contains("head") || mat.namespace().key().asString().contains("skull")) && !mat.namespace().key().asString().contains("piston") // Skulls
+                            || mat.namespace().key().asString().contains("sign")) // And signs
+            .toArray(Material[]::new)),
 
     MULTI_FACE_BLOCK((player, place) -> {
-        StateType placedType = place.getMaterial();
+        Block placedType = place.getMaterial();
 
-        WrappedBlockState multiFace = place.getExistingBlockData();
+        MinestomWrappedBlockState multiFace = place.getExistingBlockData();
         if (multiFace.getType() != placedType) {
-            multiFace = placedType.createBlockState(CompensatedWorld.blockVersion);
+            multiFace = new MinestomWrappedBlockState(placedType);
         }
 
         for (BlockFace face : place.getNearestPlacingDirections()) {
             switch (face) {
-                case UP:
+                case TOP:
                     if (multiFace.isUp()) continue;
                     if (place.isFullFace(face)) {
                         multiFace.setUp(true);
                         break;
                     }
                     continue;
-                case DOWN:
+                case BOTTOM:
                     if (multiFace.isDown()) continue;
                     if (place.isFullFace(face)) {
                         multiFace.setDown(true);
@@ -639,7 +639,7 @@ public enum BlockPlaceResult {
         }
 
         place.set(multiFace);
-    }, ItemTypes.GLOW_LICHEN, ItemTypes.SCULK_VEIN),
+    }, Material.GLOW_LICHEN, Material.SCULK_VEIN),
 
     FACE_ATTACHED_HORIZONTAL_DIRECTIONAL((player, place) -> {
         for (BlockFace face : place.getNearestPlacingDirections()) {
@@ -648,31 +648,31 @@ public enum BlockPlaceResult {
                 return;
             }
         }
-    }, ItemTypes.values().stream().filter(mat -> mat.getName().getKey().contains("button") // Find all buttons
-                    || mat.getName().getKey().contains("lever")) // And levers
-            .toArray(ItemType[]::new)),
+    }, Material.values().stream().filter(mat -> mat.namespace().key().asString().contains("button") // Find all buttons
+                    || mat.namespace().key().asString().contains("lever")) // And levers
+            .toArray(Material[]::new)),
 
     GRINDSTONE((player, place) -> { // Grindstones do not have special survivability requirements
-        WrappedBlockState stone = place.getMaterial().createBlockState(CompensatedWorld.blockVersion);
+        MinestomWrappedBlockState stone = new MinestomWrappedBlockState(place.getMaterial());
         if (place.isFaceVertical()) {
-            stone.setFace(place.getPlayerFacing() == BlockFace.UP ? Face.CEILING : Face.FLOOR);
+            stone.setFace(place.getPlayerFacing() == BlockFace.TOP ? Face.CEILING : Face.FLOOR);
         } else {
             stone.setFace(Face.WALL);
         }
         stone.setFacing(place.getPlayerFacing());
         place.set(stone);
-    }, ItemTypes.GRINDSTONE),
+    }, Material.GRINDSTONE),
 
     // Blocks that have both wall and standing states
     // Banners
     BANNER((player, place) -> {
         for (BlockFace face : place.getNearestPlacingDirections()) {
-            if (place.isSolidBlocking(face) && face != BlockFace.UP) {
+            if (place.isSolidBlocking(face) && face != BlockFace.TOP) {
                 if (BlockFaceHelper.isFaceHorizontal(face)) {
                     // type doesn't matter to grim, same hitbox.
                     // If it's a torch, create a wall torch
                     // Otherwise, it's going to be a head.  The type of this head also doesn't matter.
-                    WrappedBlockState dir = StateTypes.BLACK_WALL_BANNER.createBlockState(CompensatedWorld.blockVersion);
+                    MinestomWrappedBlockState dir = new MinestomWrappedBlockState(Block.BLACK_WALL_BANNER);
                     dir.setFacing(face.getOppositeFace());
                     place.set(dir);
                 } else {
@@ -684,37 +684,37 @@ public enum BlockPlaceResult {
     }, ItemTags.BANNERS),
 
     BIG_DRIPLEAF((player, place) -> {
-        WrappedBlockState existing = place.getDirectionalState(BlockFace.DOWN);
-        if (place.isFullFace(BlockFace.DOWN) || existing.getType() == StateTypes.BIG_DRIPLEAF || existing.getType() == StateTypes.BIG_DRIPLEAF_STEM) {
+        MinestomWrappedBlockState existing = place.getDirectionalState(BlockFace.BOTTOM);
+        if (place.isFullFace(BlockFace.BOTTOM) || existing.getType() == Block.BIG_DRIPLEAF || existing.getType() == Block.BIG_DRIPLEAF_STEM) {
             place.set(place.getMaterial());
         }
-    }, ItemTypes.BIG_DRIPLEAF),
+    }, Material.BIG_DRIPLEAF),
 
     SMALL_DRIPLEAF((player, place) -> {
-        WrappedBlockState existing = place.getDirectionalState(BlockFace.DOWN);
-        if (place.isBlockFaceOpen(BlockFace.UP) && BlockTags.SMALL_DRIPLEAF_PLACEABLE.contains(existing.getType()) || (place.isInWater() && (place.isOnDirt() || existing.getType() == StateTypes.FARMLAND))) {
+        MinestomWrappedBlockState existing = place.getDirectionalState(BlockFace.BOTTOM);
+        if (place.isBlockFaceOpen(BlockFace.TOP) && BlockTags.SMALL_DRIPLEAF_PLACEABLE.contains(existing.getType()) || (place.isInWater() && (place.isOnDirt() || existing.getType() == Block.FARMLAND))) {
             place.set(place.getMaterial());
         }
-    }, ItemTypes.SMALL_DRIPLEAF),
+    }, Material.SMALL_DRIPLEAF),
 
     SEAGRASS((player, place) -> {
-        WrappedBlockState existing = place.getDirectionalState(BlockFace.DOWN);
-        if (place.isInWater() && place.isFullFace(BlockFace.DOWN) && existing.getType() != StateTypes.MAGMA_BLOCK) {
+        MinestomWrappedBlockState existing = place.getDirectionalState(BlockFace.BOTTOM);
+        if (place.isInWater() && place.isFullFace(BlockFace.BOTTOM) && existing.getType() != Block.MAGMA_BLOCK) {
             place.set(place.getMaterial());
         }
-    }, ItemTypes.SEAGRASS),
+    }, Material.SEAGRASS),
 
     HANGING_ROOT((player, place) -> {
-        if (place.isFullFace(BlockFace.UP)) {
+        if (place.isFullFace(BlockFace.TOP)) {
             place.set(place.getMaterial());
         }
-    }, ItemTypes.HANGING_ROOTS),
+    }, Material.HANGING_ROOTS),
 
     SPORE_BLOSSOM((player, place) -> {
-        if (place.isFullFace(BlockFace.UP) && !place.isInWater()) {
+        if (place.isFullFace(BlockFace.TOP) && !place.isInWater()) {
             place.set();
         }
-    }, ItemTypes.SPORE_BLOSSOM),
+    }, Material.SPORE_BLOSSOM),
 
     FIRE((player, place) -> {
         boolean byFlammable = false;
@@ -722,69 +722,69 @@ public enum BlockPlaceResult {
             // Do we care about this enuogh to fix? // TODO: Check flmmable
             byFlammable = true;
         }
-        if (byFlammable || place.isFullFace(BlockFace.DOWN)) {
+        if (byFlammable || place.isFullFace(BlockFace.BOTTOM)) {
             place.set(place.getMaterial());
         }
-    }, ItemTypes.FLINT_AND_STEEL, ItemTypes.FIRE_CHARGE), // soul fire isn't directly placeable
+    }, Material.FLINT_AND_STEEL, Material.FIRE_CHARGE), // soul fire isn't directly placeable
 
     TRIPWIRE_HOOK((player, place) -> {
         if (place.isFaceHorizontal() && place.isFullFace(place.getDirection().getOppositeFace())) {
             place.set(place.getMaterial());
         }
-    }, ItemTypes.TRIPWIRE_HOOK),
+    }, Material.TRIPWIRE_HOOK),
 
     CORAL_PLANT((player, place) -> {
-        if (place.isFullFace(BlockFace.DOWN)) {
+        if (place.isFullFace(BlockFace.BOTTOM)) {
             place.set(place.getMaterial());
         }
-    }, ItemTypes.values().stream().filter(mat -> (mat.getName().getKey().contains("coral")
-                    && !mat.getName().getKey().contains("block") && !mat.getName().getKey().contains("fan")))
-            .toArray(ItemType[]::new)),
+    }, Material.values().stream().filter(mat -> (mat.namespace().key().asString().contains("coral")
+                    && !mat.namespace().key().asString().contains("block") && !mat.namespace().key().asString().contains("fan")))
+            .toArray(Material[]::new)),
 
     CORAL_FAN((player, place) -> {
         for (BlockFace face : place.getNearestPlacingDirections()) {
             // Torches need solid faces
             // Heads have no special preferences - place them anywhere
             // Signs need solid - exempts chorus flowers and a few other strange cases
-            if (face != BlockFace.UP) {
+            if (face != BlockFace.TOP) {
                 boolean canPlace = place.isFullFace(face);
                 if (BlockFaceHelper.isFaceHorizontal(face)) {
                     if (canPlace) { // center requires nothing (head), full face (torch), or solid (sign)
-                        WrappedBlockState coralFan = StateTypes.FIRE_CORAL_WALL_FAN.createBlockState(CompensatedWorld.blockVersion);
+                        MinestomWrappedBlockState coralFan = new MinestomWrappedBlockState(Block.FIRE_CORAL_WALL_FAN);
                         coralFan.setFacing(face);
                         place.set(coralFan);
                         return;
                     }
-                } else if (place.isFaceFullCenter(BlockFace.DOWN) && canPlace) {
+                } else if (place.isFaceFullCenter(BlockFace.BOTTOM) && canPlace) {
                     place.set(place.getMaterial());
                     return;
                 }
             }
         }
-    }, ItemTypes.values().stream().filter(mat -> (mat.getName().getKey().contains("coral")
-                    && !mat.getName().getKey().contains("block") && mat.getName().getKey().contains("fan")))
-            .toArray(ItemType[]::new)),
+    }, Material.values().stream().filter(mat -> (mat.namespace().key().asString().contains("coral")
+                    && !mat.namespace().key().asString().contains("block") && mat.namespace().key().asString().contains("fan")))
+            .toArray(Material[]::new)),
 
     PRESSURE_PLATE((player, place) -> {
-        if (place.isFullFace(BlockFace.DOWN) || place.isFaceFullCenter(BlockFace.DOWN)) {
+        if (place.isFullFace(BlockFace.BOTTOM) || place.isFaceFullCenter(BlockFace.BOTTOM)) {
             place.set();
         }
-    }, ItemTypes.values().stream().filter(mat -> (mat.getName().getKey().contains("plate")))
-            .toArray(ItemType[]::new)),
+    }, Material.values().stream().filter(mat -> (mat.namespace().key().asString().contains("plate")))
+            .toArray(Material[]::new)),
 
     RAIL((player, place) -> {
-        if (place.isFaceRigid(BlockFace.DOWN)) {
+        if (place.isFaceRigid(BlockFace.BOTTOM)) {
             place.set(place.getMaterial());
         }
     }, ItemTags.RAILS),
 
     KELP((player, place) -> {
-        StateType below = place.getDirectionalState(BlockFace.DOWN).getType();
-        WrappedBlockState existing = place.getExistingBlockData();
+        Block below = place.getDirectionalState(BlockFace.BOTTOM).getType();
+        MinestomWrappedBlockState existing = place.getExistingBlockData();
 
         double fluidLevel = 0;
         if (Materials.isWater(player.getClientVersion(), existing)) {
-            if (existing.getType() == StateTypes.WATER) {
+            if (existing.getType() == Block.WATER) {
                 int level = existing.getLevel();
                 // Falling water has a level of 8
                 fluidLevel = ((level & 0x8) == 8) ? (8.0 / 9.0f) : (8 - level) / 9.0f;
@@ -793,31 +793,31 @@ public enum BlockPlaceResult {
             }
         }
 
-        if (below != StateTypes.MAGMA_BLOCK && (place.isFullFace(BlockFace.DOWN) || below == StateTypes.KELP || below == StateTypes.KELP_PLANT) && fluidLevel >= 8 / 9d) {
+        if (below != Block.MAGMA_BLOCK && (place.isFullFace(BlockFace.BOTTOM) || below == Block.KELP || below == Block.KELP_PLANT) && fluidLevel >= 8 / 9d) {
             place.set(place.getMaterial());
         }
-    }, ItemTypes.KELP),
+    }, Material.KELP),
 
     CAVE_VINE((player, place) -> {
-        StateType below = place.getDirectionalState(BlockFace.UP).getType();
-        if (place.isFullFace(BlockFace.DOWN) || below == StateTypes.CAVE_VINES || below == StateTypes.CAVE_VINES_PLANT) {
+        Block below = place.getDirectionalState(BlockFace.TOP).getType();
+        if (place.isFullFace(BlockFace.BOTTOM) || below == Block.CAVE_VINES || below == Block.CAVE_VINES_PLANT) {
             place.set(place.getMaterial());
         }
-    }, ItemTypes.GLOW_BERRIES),
+    }, Material.GLOW_BERRIES),
 
     WEEPING_VINE((player, place) -> {
-        StateType below = place.getDirectionalState(BlockFace.UP).getType();
-        if (place.isFullFace(BlockFace.UP) || below == StateTypes.WEEPING_VINES || below == StateTypes.WEEPING_VINES_PLANT) {
+        Block below = place.getDirectionalState(BlockFace.TOP).getType();
+        if (place.isFullFace(BlockFace.TOP) || below == Block.WEEPING_VINES || below == Block.WEEPING_VINES_PLANT) {
             place.set(place.getMaterial());
         }
-    }, ItemTypes.WEEPING_VINES),
+    }, Material.WEEPING_VINES),
 
     TWISTED_VINE((player, place) -> {
-        StateType below = place.getDirectionalState(BlockFace.DOWN).getType();
-        if (place.isFullFace(BlockFace.DOWN) || below == StateTypes.TWISTING_VINES || below == StateTypes.TWISTING_VINES_PLANT) {
+        Block below = place.getDirectionalState(BlockFace.BOTTOM).getType();
+        if (place.isFullFace(BlockFace.BOTTOM) || below == Block.TWISTING_VINES || below == Block.TWISTING_VINES_PLANT) {
             place.set(place.getMaterial());
         }
-    }, ItemTypes.TWISTING_VINES),
+    }, Material.TWISTING_VINES),
 
     // Vine logic
     // If facing up, then there is a face facing up.
@@ -826,7 +826,7 @@ public enum BlockPlaceResult {
     // However, as all vines have the same hitbox (to collisions and climbing)
     // As long as one of these properties is met, it is good enough for grim!
     VINE((player, place) -> {
-        if (place.getAboveState().getType() == StateTypes.VINE) {
+        if (place.getAboveState().getType() == Block.VINE) {
             place.set();
             return;
         }
@@ -837,16 +837,16 @@ public enum BlockPlaceResult {
                 return;
             }
         }
-    }, ItemTypes.VINE),
+    }, Material.VINE),
 
     LECTERN((player, place) -> {
-        WrappedBlockState lectern = place.getMaterial().createBlockState(CompensatedWorld.blockVersion);
+        MinestomWrappedBlockState lectern = new MinestomWrappedBlockState(place.getMaterial());
         lectern.setFacing(place.getPlayerFacing().getOppositeFace());
         place.set(lectern);
-    }, ItemTypes.LECTERN),
+    }, Material.LECTERN),
 
     FENCE_GATE((player, place) -> {
-        WrappedBlockState gate = place.getMaterial().createBlockState(CompensatedWorld.blockVersion);
+        MinestomWrappedBlockState gate = new MinestomWrappedBlockState(place.getMaterial());
         gate.setFacing(place.getPlayerFacing());
 
         // Check for redstone signal!
@@ -858,7 +858,7 @@ public enum BlockPlaceResult {
     }, BlockTags.FENCE_GATES),
 
     TRAPDOOR((player, place) -> {
-        WrappedBlockState door = place.getMaterial().createBlockState(CompensatedWorld.blockVersion);
+        MinestomWrappedBlockState door = new MinestomWrappedBlockState(place.getMaterial());
 
         BlockFace direction = place.getDirection();
         if (!place.isReplaceClicked() && BlockFaceHelper.isFaceHorizontal(direction)) {
@@ -868,7 +868,7 @@ public enum BlockPlaceResult {
             door.setHalf(half);
         } else if (player.getClientVersion().isNewerThanOrEquals(ClientVersion.V_1_9)) { // 1.9 logic only
             door.setFacing(place.getPlayerFacing().getOppositeFace());
-            Half half = direction == BlockFace.UP ? Half.BOTTOM : Half.TOP;
+            Half half = direction == BlockFace.TOP ? Half.BOTTOM : Half.TOP;
             door.setHalf(half);
         }
 
@@ -879,16 +879,16 @@ public enum BlockPlaceResult {
 
         // 1.8 has special placing requirements
         if (player.getClientVersion().isOlderThan(ClientVersion.V_1_9)) {
-            WrappedBlockState dirState = place.getDirectionalState(door.getFacing().getOppositeFace());
+            MinestomWrappedBlockState dirState = place.getDirectionalState(door.getFacing().getOppositeFace());
             boolean fullFace = CollisionData.getData(dirState.getType()).getMovementCollisionBox(player, player.getClientVersion(), dirState).isFullBlock();
             boolean blacklisted = BlockTags.ICE.contains(dirState.getType()) || BlockTags.GLASS_BLOCKS.contains(dirState.getType()) ||
-                    dirState.getType() == StateTypes.TNT || BlockTags.LEAVES.contains(dirState.getType()) ||
-                    dirState.getType() == StateTypes.SNOW || dirState.getType() == StateTypes.CACTUS;
-            boolean whitelisted = dirState.getType() == StateTypes.GLOWSTONE || BlockTags.SLABS.contains(dirState.getType()) ||
+                    dirState.getType() == Block.TNT || BlockTags.LEAVES.contains(dirState.getType()) ||
+                    dirState.getType() == Block.SNOW || dirState.getType() == Block.CACTUS;
+            boolean whitelisted = dirState.getType() == Block.GLOWSTONE || BlockTags.SLABS.contains(dirState.getType()) ||
                     BlockTags.STAIRS.contains(dirState.getType());
 
             // Need a solid block to place a trapdoor on
-            if (!((dirState.getType().isBlocking() && !blacklisted && fullFace) || whitelisted)) {
+            if (!((dirState.isBlocking() && !blacklisted && fullFace) || whitelisted)) {
                 return;
             }
         }
@@ -898,27 +898,27 @@ public enum BlockPlaceResult {
     }, ItemTags.TRAPDOORS),
 
     DOOR((player, place) -> {
-        if (place.isFullFace(BlockFace.DOWN) && place.isBlockFaceOpen(BlockFace.UP)) {
-            WrappedBlockState door = place.getMaterial().createBlockState(CompensatedWorld.blockVersion);
+        if (place.isFullFace(BlockFace.BOTTOM) && place.isBlockFaceOpen(BlockFace.TOP)) {
+            MinestomWrappedBlockState door = new MinestomWrappedBlockState(place.getMaterial());
             door.setFacing(place.getPlayerFacing());
 
             // Get the hinge
             BlockFace playerFacing = place.getPlayerFacing();
 
             BlockFace ccw = BlockFaceHelper.getCounterClockwise(playerFacing);
-            WrappedBlockState ccwState = place.getDirectionalState(ccw);
+            MinestomWrappedBlockState ccwState = place.getDirectionalState(ccw);
             CollisionBox ccwBox = CollisionData.getData(ccwState.getType()).getMovementCollisionBox(player, player.getClientVersion(), ccwState);
 
-            Vector aboveCCWPos = place.getClickedLocation().add(new Vector(ccw.getModX(), ccw.getModY(), ccw.getModZ())).add(new Vector(0, 1, 0));
-            WrappedBlockState aboveCCWState = player.compensatedWorld.getWrappedBlockStateAt(aboveCCWPos);
+            MutableVector aboveCCWPos = place.getClickedLocation().add(new MutableVector(ccw.toDirection().normalX(), ccw.toDirection().normalY(), ccw.toDirection().normalZ())).add(new MutableVector(0, 1, 0));
+            MinestomWrappedBlockState aboveCCWState = player.compensatedWorld.getWrappedBlockStateAt(aboveCCWPos);
             CollisionBox aboveCCWBox = CollisionData.getData(aboveCCWState.getType()).getMovementCollisionBox(player, player.getClientVersion(), aboveCCWState);
 
             BlockFace cw = BlockFaceHelper.getPEClockWise(playerFacing);
-            WrappedBlockState cwState = place.getDirectionalState(cw);
+            MinestomWrappedBlockState cwState = place.getDirectionalState(cw);
             CollisionBox cwBox = CollisionData.getData(cwState.getType()).getMovementCollisionBox(player, player.getClientVersion(), cwState);
 
-            Vector aboveCWPos = place.getClickedLocation().add(new Vector(cw.getModX(), cw.getModY(), cw.getModZ())).add(new Vector(0, 1, 0));
-            WrappedBlockState aboveCWState = player.compensatedWorld.getWrappedBlockStateAt(aboveCWPos);
+            MutableVector aboveCWPos = place.getClickedLocation().add(new MutableVector(cw.toDirection().normalX(), cw.toDirection().normalY(), cw.toDirection().normalZ())).add(new MutableVector(0, 1, 0));
+            MinestomWrappedBlockState aboveCWState = player.compensatedWorld.getWrappedBlockStateAt(aboveCWPos);
             CollisionBox aboveCWBox = CollisionData.getData(aboveCWState.getType()).getMovementCollisionBox(player, player.getClientVersion(), aboveCWState);
 
             int i = (ccwBox.isFullBlock() ? -1 : 0) + (aboveCCWBox.isFullBlock() ? -1 : 0) + (cwBox.isFullBlock() ? 1 : 0) + (aboveCWBox.isFullBlock() ? 1 : 0);
@@ -932,9 +932,9 @@ public enum BlockPlaceResult {
             Hinge hinge;
             if ((!isCCWLower || isCWLower) && i <= 0) {
                 if ((!isCWLower || isCCWLower) && i >= 0) {
-                    int j = playerFacing.getModX();
-                    int k = playerFacing.getModZ();
-                    Vector vec3 = place.getClickedLocation();
+                    int j = playerFacing.toDirection().normalX();
+                    int k = playerFacing.toDirection().normalZ();
+                    MutableVector vec3 = place.getClickedLocation();
                     double d0 = vec3.getX();
                     double d1 = vec3.getY();
                     hinge = (j >= 0 || d1 >= 0.5D) && (j <= 0 || d1 <= 0.5D) && (k >= 0 || d0 <= 0.5D) && (k <= 0 || d0 >= 0.5D) ? Hinge.LEFT : Hinge.RIGHT;
@@ -950,23 +950,23 @@ public enum BlockPlaceResult {
                 door.setOpen(true);
             }
 
-            if (PacketEvents.getAPI().getServerManager().getVersion().isNewerThanOrEquals(ServerVersion.V_1_13)) { // Only works on 1.13+
+//            if (PacketEvents.getAPI().getServerManager().getVersion().isNewerThanOrEquals(ServerVersion.V_1_13)) { // Only works on 1.13+
                 door.setHinge(hinge);
-            }
+//            }
 
             door.setHalf(Half.LOWER);
             place.set(door);
 
-            if (PacketEvents.getAPI().getServerManager().getVersion().isNewerThanOrEquals(ServerVersion.V_1_13)) { // Only works on 1.13+
+//            if (PacketEvents.getAPI().getServerManager().getVersion().isNewerThanOrEquals(ServerVersion.V_1_13)) { // Only works on 1.13+
                 door.setHalf(Half.UPPER);
                 place.setAbove(door);
-            } else {
-                // We have to create a new door just for upper... due to neither door having complete info
-                // Lol, I have to use strings as PacketEvents wasn't designed around one material having two sets of data
-                // This is 1.12 only, but the server is also 1.12
-                WrappedBlockState above = WrappedBlockState.getByString(CompensatedWorld.blockVersion, "minecraft:" + place.getMaterial().getName().toLowerCase(Locale.ROOT) + "[half=upper,hinge=" + hinge.toString().toLowerCase(Locale.ROOT) + "]");
-                place.setAbove(above);
-            }
+//            } else {
+//                // We have to create a new door just for upper... due to neither door having complete info
+//                // Lol, I have to use strings as PacketEvents wasn't designed around one material having two sets of data
+//                // This is 1.12 only, but the server is also 1.12
+//                MinestomWrappedBlockState above = MinestomWrappedBlockState.getByString(, "minecraft:" + place.getMaterial().namespace().key().asString().toLowerCase(Locale.ROOT) + "[half=upper,hinge=" + hinge.toString().toLowerCase(Locale.ROOT) + "]");
+//                place.setAbove(above);
+//            }
         }
     }, ItemTags.DOORS),
 
@@ -975,26 +975,25 @@ public enum BlockPlaceResult {
 
         // The client lies about block place location and face to not false vanilla ac
         // However, this causes TWO desync's!
-        if (place.getPlacedAgainstMaterial() == StateTypes.SCAFFOLDING) {
+        if (place.getPlacedAgainstMaterial() == Block.SCAFFOLDING) {
             // This can desync due to look being a tick behind, pls fix mojang
             // Convert the packet to the real direction
             BlockFace direction;
             if (place.isSecondaryUse()) {
                 direction = place.isInside() ? place.getDirection().getOppositeFace() : place.getDirection();
             } else {
-                direction = place.getDirection() == BlockFace.UP ? place.getPlayerFacing() : BlockFace.UP;
+                direction = place.getDirection() == BlockFace.TOP ? place.getPlayerFacing() : BlockFace.TOP;
             }
 
             place.setFace(direction);
-
             // Mojang also lies about the location causing another GOD DAMN DESYNC
             // Jesus christ, two desync's in a single block... should I be disappointed or concerned?
             // Ghost blocks won't be fixed because of how it depends on the world state
             int i = 0;
-            Vector3i starting = new Vector3i(place.getPlacedAgainstBlockLocation().getX() + direction.getModX(), place.getPlacedAgainstBlockLocation().getY() + direction.getModY(), place.getPlacedAgainstBlockLocation().getZ() + direction.getModZ());
+            Vector3i starting = new Vector3i(place.getPlacedAgainstBlockLocation().getX() + direction.toDirection().normalX(), place.getPlacedAgainstBlockLocation().getY() + direction.toDirection().normalY(), place.getPlacedAgainstBlockLocation().getZ() + direction.toDirection().normalZ());
             while (i < 7) {
-                if (player.compensatedWorld.getWrappedBlockStateAt(starting).getType() != StateTypes.SCAFFOLDING) {
-                    if (player.compensatedWorld.getWrappedBlockStateAt(starting).getType().isReplaceable()) {
+                if (player.compensatedWorld.getWrappedBlockStateAt(starting).getType() != Block.SCAFFOLDING) {
+                    if (player.compensatedWorld.getWrappedBlockStateAt(starting).isReplaceable()) {
                         place.setBlockPosition(starting);
                         place.setReplaceClicked(true);
                         break; // We found it!
@@ -1002,7 +1001,7 @@ public enum BlockPlaceResult {
                     return; // Cancel block place
                 }
 
-                starting = new Vector3i(starting.getX() + direction.getModX(), starting.getY() + direction.getModY(), starting.getZ() + direction.getModZ());
+                starting = new Vector3i(starting.getX() + direction.toDirection().normalX(), starting.getY() + direction.toDirection().normalY(), starting.getZ() + direction.toDirection().normalZ());
                 if (BlockFaceHelper.isFaceHorizontal(direction)) {
                     i++;
                 }
@@ -1013,117 +1012,118 @@ public enum BlockPlaceResult {
 
         // A scaffolding has a distance of 0 IFF it is placed above a sturdy face
         // Else it has a distance greater than 0
-        boolean sturdyBelow = place.isFullFace(BlockFace.DOWN);
-        boolean isBelowScaffolding = place.getBelowMaterial() == StateTypes.SCAFFOLDING;
+        boolean sturdyBelow = place.isFullFace(BlockFace.BOTTOM);
+        boolean isBelowScaffolding = place.getBelowMaterial() == Block.SCAFFOLDING;
         boolean isBottom = !sturdyBelow && !isBelowScaffolding;
 
-        WrappedBlockState scaffolding = StateTypes.SCAFFOLDING.createBlockState(CompensatedWorld.blockVersion);
+        MinestomWrappedBlockState scaffolding = new MinestomWrappedBlockState(Block.SCAFFOLDING);
         scaffolding.setBottom(isBottom);
 
         place.set(scaffolding);
-    }, ItemTypes.SCAFFOLDING),
+    }, Material.SCAFFOLDING),
 
     DOUBLE_PLANT((player, place) -> {
-        if (place.isBlockFaceOpen(BlockFace.UP) && place.isOnDirt() || place.isOn(StateTypes.FARMLAND)) {
+        if (place.isBlockFaceOpen(BlockFace.TOP) && place.isOnDirt() || place.isOn(Block.FARMLAND)) {
             place.set();
             place.setAbove(); // Client predicts block above
         }
-    }, ItemTypes.TALL_GRASS, ItemTypes.LARGE_FERN, ItemTypes.SUNFLOWER,
-            ItemTypes.LILAC, ItemTypes.ROSE_BUSH, ItemTypes.PEONY),
+    }, Material.TALL_GRASS, Material.LARGE_FERN, Material.SUNFLOWER,
+            Material.LILAC, Material.ROSE_BUSH, Material.PEONY),
 
     MUSHROOM((player, place) -> {
         if (BlockTags.MUSHROOM_GROW_BLOCK.contains(place.getBelowMaterial())) {
             place.set();
-        } else if (place.isFullFace(BlockFace.DOWN)) { // TODO: Check occluding
+        } else if (place.isFullFace(BlockFace.BOTTOM)) { // TODO: Check occluding
             Vector3i placedPos = place.getPlacedBlockPos();
             // This is wrong and depends on lighting, but the server resync's anyways plus this isn't a solid block. so I don't care.
             place.set();
         }
-    }, ItemTypes.BROWN_MUSHROOM, ItemTypes.RED_MUSHROOM),
+    }, Material.BROWN_MUSHROOM, Material.RED_MUSHROOM),
 
     MANGROVE_PROPAGULE((player, place) -> {
         // Must be hanging below mangrove leaves
-        if (place.getAboveState().getType() != StateTypes.MANGROVE_LEAVES) return;
+        if (place.getAboveState().getType() != Block.MANGROVE_LEAVES) return;
         // Fall back to BUSH_BLOCK_TYPE
-        if (place.isOnDirt() || place.isOn(StateTypes.FARMLAND)) {
+        if (place.isOnDirt() || place.isOn(Block.FARMLAND)) {
             place.set();
         }
-    }, ItemTypes.MANGROVE_PROPAGULE),
+    }, Material.MANGROVE_PROPAGULE),
 
     FROGSPAWN((player, place) -> {
         if (Materials.isWater(player.getClientVersion(), place.getExistingBlockData()) && Materials.isWater(player.getClientVersion(), place.getAboveState())) {
             place.set();
         }
-    }, ItemTypes.FROGSPAWN),
+    }, Material.FROGSPAWN),
 
     BUSH_BLOCK_TYPE((player, place) -> {
-        if (place.isOnDirt() || place.isOn(StateTypes.FARMLAND)) {
+        if (place.isOnDirt() || place.isOn(Block.FARMLAND)) {
             place.set();
         }
-    }, ItemTypes.SPRUCE_SAPLING, ItemTypes.ACACIA_SAPLING,
-            ItemTypes.BIRCH_SAPLING, ItemTypes.DARK_OAK_SAPLING,
-            ItemTypes.OAK_SAPLING, ItemTypes.JUNGLE_SAPLING,
-            ItemTypes.SWEET_BERRIES, ItemTypes.DANDELION,
-            ItemTypes.POPPY, ItemTypes.BLUE_ORCHID,
-            ItemTypes.ALLIUM, ItemTypes.AZURE_BLUET,
-            ItemTypes.RED_TULIP, ItemTypes.ORANGE_TULIP,
-            ItemTypes.WHITE_TULIP, ItemTypes.PINK_TULIP,
-            ItemTypes.OXEYE_DAISY, ItemTypes.CORNFLOWER,
-            ItemTypes.LILY_OF_THE_VALLEY, ItemTypes.PINK_PETALS,
-            ItemTypes.GRASS),
+    }, Material.SPRUCE_SAPLING, Material.ACACIA_SAPLING,
+            Material.BIRCH_SAPLING, Material.DARK_OAK_SAPLING,
+            Material.OAK_SAPLING, Material.JUNGLE_SAPLING,
+            Material.SWEET_BERRIES, Material.DANDELION,
+            Material.POPPY, Material.BLUE_ORCHID,
+            Material.ALLIUM, Material.AZURE_BLUET,
+            Material.RED_TULIP, Material.ORANGE_TULIP,
+            Material.WHITE_TULIP, Material.PINK_TULIP,
+            Material.OXEYE_DAISY, Material.CORNFLOWER,
+            Material.LILY_OF_THE_VALLEY, Material.PINK_PETALS,
+            Material.GRASS_BLOCK),
 
     POWDER_SNOW_BUCKET((player, place) -> {
         place.set();
-        CheckManagerListener.setPlayerItem(player, place.getHand(), ItemTypes.BUCKET);
-    }, ItemTypes.POWDER_SNOW_BUCKET),
+        CheckManagerListener.setPlayerItem(player, place.getHand(), Material.BUCKET);
+    }, Material.POWDER_SNOW_BUCKET),
 
     GAME_MASTER((player, place) -> {
         if (player.canUseGameMasterBlocks()) {
             place.set();
         }
-    }, ItemTypes.COMMAND_BLOCK, ItemTypes.CHAIN_COMMAND_BLOCK, ItemTypes.REPEATING_COMMAND_BLOCK,
-            ItemTypes.JIGSAW, ItemTypes.STRUCTURE_BLOCK),
+    }, Material.COMMAND_BLOCK, Material.CHAIN_COMMAND_BLOCK, Material.REPEATING_COMMAND_BLOCK,
+            Material.JIGSAW, Material.STRUCTURE_BLOCK),
 
     NO_DATA((player, place) -> {
         place.set(place.getMaterial());
-    }, ItemTypes.AIR);
+    }, Material.AIR);
 
     // This should be an array... but a hashmap will do for now...
-    private static final Map<ItemType, BlockPlaceResult> lookupMap = new HashMap<>();
+    private static final Map<Material, BlockPlaceResult> lookupMap = new HashMap<>();
 
     static {
         for (BlockPlaceResult data : values()) {
-            for (ItemType type : data.materials) {
+            for (Material type : data.materials) {
                 lookupMap.put(type, data);
             }
         }
     }
 
     private final BlockPlaceFactory data;
-    private final ItemType[] materials;
+    private final Material[] materials;
 
-    BlockPlaceResult(BlockPlaceFactory data, ItemType... materials) {
+    BlockPlaceResult(BlockPlaceFactory data, Material... materials) {
         this.data = data;
-        Set<ItemType> mList = new HashSet<>(Arrays.asList(materials));
+        Set<Material> mList = new HashSet<>(Arrays.asList(materials));
         mList.remove(null); // Sets can contain one null
-        this.materials = mList.toArray(new ItemType[0]);
+        this.materials = mList.toArray(new Material[0]);
     }
 
     BlockPlaceResult(BlockPlaceFactory data, ItemTags tags) {
-        this(data, tags.getStates().toArray(new ItemType[0]));
+        this(data, tags.getStates().toArray(new Material[0]));
     }
 
     BlockPlaceResult(BlockPlaceFactory data, BlockTags tag) {
-        List<ItemType> types = new ArrayList<>(tag.getStates().size());
-        for (StateType state : tag.getStates()) {
-            types.add(ItemTypes.getTypePlacingState(state));
+        List<Material> types = new ArrayList<>(tag.getStates().size());
+        for (Block state : tag.getStates()) {
+            // todo minestom this sucks
+            types.add(state.defaultState().registry().material());
         }
 
         this.data = data;
-        this.materials = types.toArray(new ItemType[0]);
+        this.materials = types.toArray(new Material[0]);
     }
 
-    public static BlockPlaceFactory getMaterialData(ItemType placed) {
+    public static BlockPlaceFactory getMaterialData(Material placed) {
         return lookupMap.getOrDefault(placed, NO_DATA).data;
     }
 }
